fully functional. high scores in order and limited to 10 entries

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     <main>
         <div id="start-screen">
             <h1>evan quiz</h1>
-            <p>Ayy here's my quiz. i hope you're ready. smash that mf start button to continue.</p>
+            <img src="./Assets/favicon.png" alt="thinking emoji but poorly drawn" style="width:200px">
+            <p>Ayy here's my quiz. i hope you're ready. smash that start button to continue.</p>
             <button onclick="startQuiz()">Ayy lmao</button>
         </div>
 
         <div id="quiz">
+            <img id="image" src="" style="height:200px">
             <h2 id="question"></h2>
             <div id="answers"></div>
         </div>
