--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="start-screen">
             <h1>evan quiz</h1>
             <img src="./Assets/favicon.png" alt="thinking emoji but poorly drawn" style="width:200px">
-            <p>Ayy here's my quiz. i hope you're ready. smash that start button to continue.</p>
+            <p>ayy here's my quiz. i hope you're ready. smash that start button to continue.</p>
             <button onclick="startQuiz()">Ayy lmao</button>
         </div>
 
