added right/wrong indicators

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <img id="image" src="" style="height:200px">
             <h2 id="question"></h2>
             <div id="answers"></div>
+            <br>
+            <div id="toast"></div>
         </div>
 
         <div id="initials">
